--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@
 a {
   cursor: pointer;
 }
+.left-align {
+  text-align: left;
+  padding: 15px;
+}
 .modal-dialog {
   margin: auto;
   margin-top: 20px;
