fix on menu modal

--- a/css/login-style.css
+++ b/css/login-style.css
@@ -94,3 +94,9 @@ section {
   font-size: 15px;
   font-family: 'ProximaNovaRgRegular';
 }
+
+@media (max-width: 1200px) { 
+  .modal-content {
+    width: 100%!important;
+  }
+}
