--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,9 @@
-@font-face {
-  font-family: 'ProximaNovaRgRegular';
-  src: url('../fonts/proximanova-regular-webfont.eot');
-  src: url('../fonts/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/proximanova-regular-webfont.woff') format('woff'),
-  url('../fonts/proximanova-regular-webfont.ttf') format('truetype'),
-  url('../fonts/proximanova-regular-webfont.svg#ProximaNovaRgRegular') format('svg');
-  font-weight: normal;
-  font-style: normal;
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'neosansregular', sans-serif;
+  font-weight: 300;
 }
-@font-face {
-  font-family: 'ProximaNovaBlRegular';
-  src: url('../fonts/proximanova-black-webfont.eot');
-  src: url('../fonts/proximanova-black-webfont.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/proximanova-black-webfont.woff') format('woff'),
-  url('../fonts/proximanova-black-webfont.ttf') format('truetype'),
-  url('../fonts/proximanova-black-webfont.svg#ProximaNovaBlRegular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+
 #nubityApp {
   height: 100%;
 }
@@ -26,6 +12,12 @@
 }
 a {
   cursor: pointer;
+  text-decoration: none;
+  color: #9e9e9e;
+}
+a:hover, a:active {
+  text-decoration: none;
+  color: #58595b;
 }
 .left-align {
   text-align: left;
@@ -65,7 +57,7 @@ a {
   position: fixed;
   bottom: 0;
   padding-left: 10px;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
   background-color: #eee;
   text-align: center;
 }
@@ -92,6 +84,7 @@ a {
   height: 50px;
   padding-top: 12px;
   padding-bottom: 12px;
+  margin-left: 20px;
 }
 .navbar .nav > li {
   border: solid 1px transparent!important;
@@ -99,7 +92,7 @@ a {
   color: white!important;
   font-weight: bold;
   white-space: nowrap;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
   letter-spacing: 1px;
 }
 .nav > li > a {
@@ -139,6 +132,7 @@ a {
   padding: 0!important;
   font-weight: bold;
   font-size: 15px;
+  line-height: 15px;
 }
 .up-li {
   margin-top: -5px;
@@ -171,14 +165,32 @@ a {
   width: 100px;
   height: 75px;
   text-align: center;
+  position: relative;
+  color: #9e9e9e;
+}
+.menu-button.nb-active a {
+  color: #58595b !important;
+  position: relative !important;
+}
+.menu-button.nb-active::before {
+  content: "";
+  width:0;
+  height:0;
+  border-top:10px solid transparent;
+  border-bottom:10px solid transparent;
+  border-right:10px solid white;
+  position: absolute;
+  right: 0%;
+  top:15%;
 }
 .menu-text {
   text-align: center;
   color: grey;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'neosansregular', sans-serif;
+  line-height: 50%;
 }
 .menu-icon {
-  color: grey;
+  color: #9e9e9e;
   font-size: 25px!important;
 }
 .social-links {
@@ -202,7 +214,7 @@ a {
 }
 .section-title {
   height: 60px;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
 }
 .section-tabs {
   height: 41px;
@@ -220,7 +232,7 @@ a {
   border-bottom: solid 1px #ddd;
   border-right: solid 1px #ddd;
   padding:20px;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   margin-bottom: 30px;
   background-color: white!important;
@@ -385,7 +397,7 @@ body {
   border: solid 0px transparent;
   border-radius: 2px;
   color: white;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
   padding: 3px 25px;
 }
 .blue-button {
@@ -400,7 +412,7 @@ body {
   border: solid 0px transparent;
   border-radius: 2px;
   color: white;
-  font-family: 'ProximaNovaRgRegular';
+  font-family: 'Open Sans', sans-serif;
   padding: 3px 93px;
   font-size: 17px;
   margin: 30px;
@@ -729,4 +741,101 @@ body {
 }
 .icon-margin {
   margin: 3px;
+}
+/*Icon helpers*/
+.tiny {
+  font-size: 1rem !important;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+}
+.small {
+  font-size: 2rem !important;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+}
+.icon-state {
+  font-size: 2.5rem !important;
+  line-height: 1;
+  vertical-align: middle;
+}
+.medium {
+  font-size: 4rem !important;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+}
+.large {
+  font-size: 5rem !important;
+  line-height: 1;
+  vertical-align: middle;
+  text-align: center;
+}
+/*Text color Helpers*/
+.white-text {
+  color: white !important;
+}
+.black-text {
+  color: black !important;
+}
+.grey-text {
+  color: #9e9e9e !important;
+}
+.red-text {
+  color: #db0720 !important;
+}
+.green-text {
+  color: #43a306 !important;
+}
+.yellow-text {
+  color: #ffc524 !important;
+}
+.blue-text {
+  color: #2d8ccf !important;
+}
+/*Color helpers*/
+.nubity-white {
+  background-color: white !important;
+}
+.nubity-black {
+  background-color: black !important;
+}
+.nubity-grey {
+  background-color: #9e9e9e !important;
+}
+.nubity-red {
+  background-color: #db0720 !important;
+}
+.nubity-green {
+  background-color: #43a306 !important;
+}
+.nubity-yellow {
+  background-color: #ffc524 !important;
+}
+.nubity-blue {
+  background-color: #2d8ccf !important;
+}
+/*Table style*/
+table, th, td {
+  font-family: 'neosanslight', sans-serif;
+}
+table {
+  border: 1px solid #CECECE;
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+  vertical-align: middle;
+  text-align: center;
+  height: 40px;
+}
+th {
+  background-color: #cecece;
+  color: white;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
