--- a/css/style.css
+++ b/css/style.css
@@ -341,13 +341,25 @@ body {
   min-height: 250px!important;
 }
 .dashboard-icons {
-  height: 51px;
+  height: auto;
   width: 20%!important;
   margin: 5%;
   text-align: center;
   border: solid 1.5px #d5d5d5;
   border-radius: 5px;
-  padding: 0px!important;
+  padding: 15px 0;
+}
+.dashboard-icons-counter {
+  font-size: 14pt;
+}
+.dashboard-icons-counter.first {
+  color: #2d8ccf;
+}
+.dashboard-icons-counter.second {
+  color: #ffc524;
+}
+.dashboard-icons-counter.third {
+  color: #db0720;
 }
 .dashboard-minus {
   position: absolute;
