stop alerting button

--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,9 @@ body {
   right: -14px;
   font-size: 30px!important;
 }
+.invisible {
+  color:transparent;
+}
 .yellow-color {
   color: #ffc524;
 }
