[SPA-14] React router Sidebar / Refactoring
Feature: Sidebar now works with Link, a React Router component, instead of
jQuery
Fix: Fixed CS issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,3 +68,13 @@
     font-weight: normal;
     font-style: normal;
 }
+/*Font Helpers*/
+.neosansregular {
+    font-family: 'neosansregular' !important;
+}
+.neosansbold {
+    font-family: 'neosansbold' !important;
+}
+.neosanslight {
+    font-family: 'neosanslight' !important;
+}
