--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
   text-decoration: none;
   color: #9e9e9e;
 }
-a:hover, a:active {
+a:hover, a:active, a:focus {
   text-decoration: none;
   color: #58595b;
 }
@@ -44,6 +44,19 @@ a:hover, a:active {
   width: 100%!important;
   height: 100%!important;
   overflow: auto;
+}
+.modal-close {
+  width: 18px;
+  height: 18px;
+  border-radius: 50px;
+  border: 2px solid #cecece;
+  color: #cecece;
+  background-color: #f2f2f2;
+}
+.modal-close span {
+  position: relative;
+  left: -3px;
+  top: -4px;
 }
 .menu-tab-content {
   height: calc(100% - 50px);
@@ -167,13 +180,12 @@ a:hover, a:active {
   height: 75px;
   text-align: center;
   position: relative;
-  color: #9e9e9e;
 }
-.menu-button.nb-active a {
+a.nb-active {
   color: #58595b !important;
   position: relative !important;
 }
-.menu-button.nb-active::before {
+a.nb-active > .menu-button::before {
   content: "";
   width:0;
   height:0;
@@ -181,8 +193,8 @@ a:hover, a:active {
   border-bottom:10px solid transparent;
   border-right:10px solid white;
   position: absolute;
-  right: 0%;
-  top:15%;
+  left: 90px;
+  top: 15px;
 }
 .menu-text {
   text-align: center;
@@ -193,6 +205,25 @@ a:hover, a:active {
 .menu-icon {
   color: #9e9e9e;
   font-size: 25px!important;
+}
+.action-button {
+  display: inline;
+  padding: .45em 1.4em;
+  font-size: 10pt;
+  font-family: 'neosanslight', sans-serif;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .30em;
+  cursor: pointer;
+}
+.action-button-stop {
+  color: black;
+  background-color: white;
+  border: solid 1px black;
+  padding: .35em 1.3em;
 }
 .social-links {
   height: 30%;
@@ -223,7 +254,7 @@ a:hover, a:active {
 }
 .section-tabs {
   height: 41px;
-  margin-left: 30px;
+  margin-left: 31px;
   margin-right: 30px;
   border-right-color: white;
   border-left-color: white;
@@ -612,6 +643,13 @@ body {
 .nav-tabs > li {
   height: calc(100% + 1px)!important;
 }
+.navbar .nav > li.tab-link {
+  border: none !important;
+  font-family: 'neosanslight';
+}
+.navbar .nav > li.active.tab-link > a {
+  color: #2d8ccf !important;
+}
 .text-stopped {
   color: #aaa;
 }
@@ -623,8 +661,8 @@ body {
 }
 .os i {
   position: absolute;
-  right: 11px;
-  top: 3px;
+  right: 6px;
+  top: 11px;
 }
 .sprites {
   background-image: url('../images/sprites.png');
@@ -813,12 +851,14 @@ body {
   line-height: 1;
   vertical-align: middle;
   text-align: center;
+  position: relative;
+  bottom: -2px;
 }
 .icon-state {
   font-size: 2.5rem !important;
   vertical-align: middle;
   position: relative;
-  bottom: -6px;
+  bottom: -4px;
 }
 .medium {
   font-size: 4rem !important;
@@ -878,7 +918,8 @@ body {
 }
 /*Table style*/
 table, th, td {
-  font-family: 'neosanslight', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 table {
   border: 1px solid #CECECE;
@@ -889,12 +930,20 @@ th, td {
   border: 1px solid white;
   border-collapse: collapse;
   vertical-align: middle;
-  text-align: center;
   height: 40px;
 }
+td {
+  text-align: left;
+  padding-left: 7px;
+}
+td.icons {
+  text-align: center;
+}
 th {
+  text-align: center;
   background-color: #cecece;
   color: white;
+  padding: 0 10px;
 }
 tr:nth-child(even) {
   background-color: #f2f2f2;
@@ -986,6 +1035,12 @@ tr:nth-child(even) {
   }
   .menu-text {
     display: none;
+  }
+}
+@media screen and (max-height: 460px) {
+  .social-links {
+    display: none;
+    visibility: hidden;
   }
 }
 /*Preloader*/
