[SPA-14] My account / Company / Navbar
Feature: My account with data loaded: Fisrtname, lastname, email, avatar,
language
Feature: Company with data loaded: Company name, Commercial Name, city
value, state value, country value, address, postal code, language
Feature: Navbar user picture loaded.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -130,7 +130,7 @@ a:hover, a:active, a:focus {
   background-color: transparent!important;
 }
 .user-photo {
-  background: red;
+  background: #e8faff;
   height: 30px;
   width: 30px;
   margin: 0 10px;
