--- a/web/css/style.css
+++ b/web/css/style.css
@@ -624,6 +624,60 @@ html, body {
   margin-bottom: 15px;
   text-align: center;
 }
+/*Start monitoring*/
+ol {
+    counter-reset: li;
+    list-style: none;
+    *list-style: decimal;
+    font: 15px 'neosansregular', sans-serif;
+    padding: 0;
+    margin-bottom: 4em;
+}
+ol.rounded-list {
+  margin-left: 20px;
+}
+.rounded-list p.rounded-list-title {
+    position: relative;
+    display: block;
+    padding: .4em .4em .4em 2em;
+    *padding: .4em;
+    margin: .5em 0;
+    color: #fff;
+    text-decoration: none;
+    border-radius: .3em;
+    transition: all .3s ease-out;   
+}
+.rounded-list p.rounded-list-title:before {
+    content: counter(li);
+    counter-increment: li;
+    position: absolute; 
+    left: -1.3em;
+    top: 50%;
+    margin-top: -1.3em;
+    background: #2d8ccf;
+    height: 2.4em;
+    width: 2.4em;
+    line-height: 1.9em;
+    border: .3em solid #fff;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 2em;
+    transition: all .3s ease-out;
+}
+.rounded-list p.rounded-list-title span {
+  color: #444;
+}
+.rounded-list li input {
+  width: 80%;
+  border: 1px solid #cecece;
+  border-radius: 3px;
+}
+.rounded-list li .notice {
+  font-size: 10pt;
+}
+#loading-message {
+  margin-top: 35px;
+}
 .red-icon {
   color: red;
   font-size: 16px!important;
@@ -1141,6 +1195,21 @@ tr:nth-child(even) {
   color: #979797;
   font-size: 10px;
   margin: 100px auto;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-animation: load4 1.3s infinite linear;
+  animation: load4 1.3s infinite linear;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.loader-mini {
+  color: #979797;
+  font-size: 4px;
+  margin: -9px -25px;
   width: 1em;
   height: 1em;
   border-radius: 50%;
