--- a/web/css/style.css
+++ b/web/css/style.css
@@ -84,7 +84,7 @@ a:hover, a:active, a:focus {
   background-position: 0 0;
   background-repeat: repeat;
   background-size: auto auto;
-  z-index: 10005;
+  z-index: 1041;
   height: 45px;
 }
 .navbar {
@@ -142,7 +142,7 @@ a:hover, a:active, a:focus {
   background-color: #0fe80c;
   position: absolute;
   top: 0!important;
-  right: -1px;
+  right: -10px;
   color: white;
   border: solid 2px;
   border-radius: 30px;
@@ -244,9 +244,10 @@ a.nb-active > .menu-button::before {
   cursor: no-drop;
 }
 .social-links {
-  height: 30%;
   width: 100px;
   text-align: center;
+  position: absolute;
+  bottom: 0%;
 }
 .social-icon {
   color: grey;
@@ -267,8 +268,7 @@ a.nb-active > .menu-button::before {
   margin-left: 30px;
 }
 .section-title {
-  height: 60px;
-  font-family: 'Open Sans', sans-serif;
+  height: auto;
 }
 .section-tabs {
   height: 41px;
@@ -782,6 +782,19 @@ ol.rounded-list {
 .navbar .nav > li.active.tab-link > a {
   color: #2d8ccf !important;
 }
+.onboarding-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-top: 6px;
+  background-color: #fff;
+  border: none;
+  color: #444;
+  font-size: 20pt;
+}
+.onboarding-button i {
+  margin-left: -5px;
+}
 .text-stopped {
   color: #aaa;
 }
@@ -949,8 +962,15 @@ ol.rounded-list {
   margin: 3px;
 }
 /*Element helpers*/
-.hide {
-  display: none;
+.hide-it {
+  visibility: hidden !important;
+}
+.clear:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  line-height: 0;
   visibility: hidden;
 }
 .min {
@@ -1128,7 +1148,7 @@ tr:nth-child(even) {
   .menu-button.last {
     right: 0;
   }
-  .menu-button.nb-active::before {
+  a.nb-active > .menu-button::before {
   content: "";
   width:0;
   height:0;
@@ -1136,7 +1156,7 @@ tr:nth-child(even) {
   border-right: 10px solid transparent;
   border-top: 10px solid #fff;
   position: absolute;
-  right: 40%;
+  left: 37%;
   top:-20px;
 }
   .menu-text {
@@ -1153,7 +1173,6 @@ tr:nth-child(even) {
   }
   .menu-buttons {
     left: 5%;
-    /*margin-top: 0;*/
   }
   .menu-button {
     width: 75px;
@@ -1184,7 +1203,7 @@ tr:nth-child(even) {
     display: none;
   }
 }
-@media screen and (max-height: 460px) {
+@media screen and (max-height: 580px) {
   .social-links {
     display: none;
     visibility: hidden;
