--- a/web/css/style.css
+++ b/web/css/style.css
@@ -153,6 +153,19 @@ a:hover, a:active, a:focus {
   font-size: 15px;
   line-height: 15px;
 }
+.alert-badge {
+  width: 18px;
+  height: 18px;
+  background-color: #db0720;
+  position: absolute;
+  border-radius: 50%;
+  font-size: 8pt;
+  color: white;
+  line-height: 1.8;
+  left: 57px;
+  top: -6px;
+  font-family: 'neosanslight', sans-serif;
+}
 .up-li {
   margin-top: -5px;
 }
@@ -202,7 +215,7 @@ a.nb-active > .menu-button::before {
   border-right:10px solid white;
   position: absolute;
   left: 90px;
-  top: 15px;
+  top: 10px;
 }
 .menu-text {
   text-align: center;
@@ -645,12 +658,12 @@ ol.rounded-list {
     color: #fff;
     text-decoration: none;
     border-radius: .3em;
-    transition: all .3s ease-out;   
+    transition: all .3s ease-out;
 }
 .rounded-list p.rounded-list-title:before {
     content: counter(li);
     counter-increment: li;
-    position: absolute; 
+    position: absolute;
     left: -1.3em;
     top: 50%;
     margin-top: -1.3em;
@@ -1037,7 +1050,7 @@ ol.rounded-list {
   font-size: 12rem !important;
   line-height: 1;
   vertical-align: middle;
-  text-align: center;  
+  text-align: center;
 }
 /*Text color Helpers*/
 .white-text {
@@ -1092,6 +1105,12 @@ table {
   border: 1px solid #CECECE;
   border-collapse: collapse;
   width: 100%;
+}
+th.column-icon {
+  width: 70px;
+}
+th.column-button {
+  width: 135px;
 }
 th, td {
   border: 1px solid white;
@@ -1158,13 +1177,16 @@ tr:nth-child(even) {
   position: absolute;
   left: 37%;
   top:-20px;
-}
+  }
   .menu-text {
     line-height: 1;
     font-size: 8pt;
   }
   .social-links {
     display: none;
+  }
+  .alert-badge {
+    left: 42px;
   }
 }
 @media screen and (max-width: 425px) {
