--- a/web/css/style.css
+++ b/web/css/style.css
@@ -125,6 +125,16 @@ a:hover, a:active, a:focus {
   color:white !important;
   padding:0 10px !important;
   font-family:'neosansregular' !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+}
+.dropdown-menu-nb:active {
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+.btn-group.open .dropdown-toggle, .btn-group.open:active .dropdown-toggle:active {
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
   background-color: transparent!important;
