--- a/web/css/stylesheet.css
+++ b/web/css/stylesheet.css
@@ -175,3 +175,25 @@ width:100%;
 .add-cloud-btn-deleted {
   background-color: #DD4A4A;
 }
+.custom-modal-ovarlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 990;
+  background-color: #CECECE;
+}
+#editModal {
+  position: absolute;
+  margin-top: -469px;
+  z-index: 1000;
+}
+.dialog-body{
+  border: 1px solid #DDDDDD;
+  padding: 10px;
+  margin: 0px auto 10px;
+  overflow: hidden;
+  height: 100%;
+  width: 90%;
+}
