--- a/web/css/style.css
+++ b/web/css/style.css
@@ -18,6 +18,7 @@ a {
 a:hover, a:active, a:focus {
   text-decoration: none;
   color: #58595b;
+  transition: all 0.3s ease-in;
 }
 .left-align {
   text-align: left;
@@ -152,19 +153,15 @@ a:hover, a:active, a:focus {
   padding-top: 7px!important;
 }
 .notification-badge {
+  padding: 0.1em 0.3em;
   background-color: #0fe80c;
   position: absolute;
-  top: 0!important;
-  right: -10px;
+  border-radius: 50%;
+  font-size: 11pt;
   color: white;
-  border: solid 2px;
-  border-radius: 30px;
-  height: 20px;
-  width: 20px;
-  padding: 0!important;
-  font-weight: bold;
-  font-size: 15px;
-  line-height: 15px;
+  line-height: 1.1;
+  left: 21px;
+  top: -6px;
 }
 .alert-badge {
   width: 18px;
@@ -181,6 +178,9 @@ a:hover, a:active, a:focus {
 }
 .up-li {
   margin-top: -5px;
+}
+.up-li.last {
+  margin-right: 30px;
 }
 .profile-picture-li {
   margin-right: -9px;
@@ -215,7 +215,7 @@ a:hover, a:active, a:focus {
   text-align: center;
   position: relative;
 }
-a.nb-active {
+a.nb-active, a.nb-active p.menu-text {
   color: #58595b !important;
   position: relative !important;
 }
@@ -233,8 +233,9 @@ a.nb-active > .menu-button::before {
 .menu-text {
   text-align: center;
   color: grey;
-  font-family: 'neosansregular', sans-serif;
-  line-height: 50%;
+  font-family: 'neosanslight', sans-serif;
+  line-height: 1;
+  font-size: 12px;
 }
 .menu-icon {
   color: #9e9e9e;
@@ -861,13 +862,18 @@ ol.rounded-list {
   height: 30px;
   border-radius: 50%;
   margin-top: 6px;
-  background-color: #fff;
+  margin-left: 10px;
   border: none;
-  color: #444;
-  font-size: 20pt;
+  color: #0571a9 !important;
+  font-size: 33pt;
+}
+.onboarding-button:hover {
+  color: #03486b !important;
 }
 .onboarding-button i {
-  margin-left: -5px;
+  position: relative;
+  left: -22px;
+  bottom: 7px;
 }
 .text-stopped {
   color: #aaa;
@@ -1116,6 +1122,8 @@ ol.rounded-list {
   line-height: 1;
   vertical-align: middle;
   text-align: center;
+  position: relative;
+  bottom: -23px;
 }
 /*Text color Helpers*/
 .white-text {
@@ -1200,6 +1208,13 @@ th {
 }
 tr:nth-child(even) {
   background-color: #f2f2f2;
+}
+/*Placeholders*/
+.empty-table {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-bottom: 25px;
 }
 /*HighCharts Fix*/
 .highcharts-title {
