--- a/web/css/style.css
+++ b/web/css/style.css
@@ -60,7 +60,7 @@ a:hover, a:active, a:focus {
 .modal-close span {
   position: relative;
   left: -3px;
-  top: -5px;
+  top: -4px;
 }
 .menu-tab-content {
   height: calc(100% - 50px);
@@ -153,15 +153,17 @@ a:hover, a:active, a:focus {
   padding-top: 7px!important;
 }
 .notification-badge {
-  padding: 0.1em 0.3em;
+  width: 18px;
+  height: 18px;
   background-color: #0fe80c;
   position: absolute;
   border-radius: 50%;
   font-size: 11pt;
   color: white;
-  line-height: 1.1;
+  line-height: 1.3;
   left: 21px;
   top: -6px;
+  text-align: center;
 }
 .alert-badge {
   width: 18px;
