[SPA-14] Login / Warning
Feature: After a successful login, a spinner replaces the login button
until the dashboard loads
Fix: Warning message for action buttons like start, stop and restart are
separated from the Warning-message component

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1332,14 +1332,11 @@ tr:nth-child(even) {
   }
 }
 /*Preloader*/
-.loader {
+.loader, .loader-mini, .loader-medium {
   color: #979797;
-  font-size: 10px;
-  margin: 100px auto;
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  position: relative;
   text-indent: -9999em;
   -webkit-animation: load4 1.3s infinite linear;
   animation: load4 1.3s infinite linear;
@@ -1347,20 +1344,23 @@ tr:nth-child(even) {
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
+.loader {
+  font-size: 10px;
+  margin: 100px auto;
+  position: relative;
+}
 .loader-mini {
-  color: #979797;
   font-size: 4px;
   margin: -9px -25px;
-  width: 1em;
-  height: 1em;
-  border-radius: 50%;
   position: relative;
-  text-indent: -9999em;
-  -webkit-animation: load4 1.3s infinite linear;
-  animation: load4 1.3s infinite linear;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+}
+.loader-medium {
+  font-size: 6px;
+  position: absolute;
+}
+.login-load {
+  position: relative;
+  margin: 35px 50%;
 }
 @-webkit-keyframes load4 {
   0%,
