--- a/web/css/style.css
+++ b/web/css/style.css
@@ -328,7 +328,7 @@ a.nb-active > .menu-button::before {
   color: #9e9e9e;
   font-size: 25px!important;
 }
-.action-button {
+.action-button, a.action-button {
   display: inline;
   padding: .45em 1.4em;
   font-size: 10pt;
@@ -1393,6 +1393,9 @@ tr:nth-child(even) {
   }
   .section-tabs {
     margin: 0 !important;
+  }
+  .login-box {
+    top: 0 !important;
   }
 }
 @media screen and (max-width: 425px) {
