remove add cloud button

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1788,3 +1788,9 @@ tr:nth-child(even) {
             transform: scale(1);
   }
 }
+.carousel-container {
+  margin:30px;
+}
+.carousel-control {
+  background: transparent!important;
+}
