--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1821,3 +1821,30 @@ tr:nth-child(even) {
   margin-left: 15px;
   margin-right: 15px;
 }
+.configure-icon {
+  font-size: 19px;
+  padding: 5px;
+}
+.carousel-active {
+  border: 1px solid #4195fc;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 0px 8px #4195fc;
+  -moz-box-shadow: 0px 0px 8px #4195fc;
+  box-shadow: 0px 0px 8px #4195fc;
+}
+.is-installed {
+  content: '';
+  width: 8px;
+  height: 8px;
+  display: inherit;
+  border-radius: 100%;
+  background: #05fb05;
+  text-align: center;
+  margin: auto;
+}
+.is-installed-container {
+  width: 100%;
+  height: 10px;
+}
