--- a/web/css/style.css
+++ b/web/css/style.css
@@ -340,6 +340,7 @@ a.nb-active > .menu-button::before {
   vertical-align: baseline;
   border-radius: .30em;
   cursor: pointer;
+  border: solid 0px;
 }
 .action-button-start {
   color: white;
@@ -1826,13 +1827,10 @@ tr:nth-child(even) {
   padding: 5px;
 }
 .carousel-active {
-  border: 1px solid #4195fc;
+  border: 2.5px solid #999;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: 0px 0px 8px #4195fc;
-  -moz-box-shadow: 0px 0px 8px #4195fc;
-  box-shadow: 0px 0px 8px #4195fc;
 }
 .is-installed {
   content: '';
