--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1429,7 +1429,7 @@ tr.content:hover {
 /*Media Queries*/
 @media screen and (max-width: 1440px) {
   .large-section-tabs .section-tabs {
-    height: 75px;  
+    height: 75px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -2006,4 +2006,10 @@ a.link-login:hover {
 .is-installed-container {
   width: 100%;
   height: 10px;
+}
+
+.signup-error-show{
+  width: 50%;
+  margin: 0px auto;
+  text-align: left;
 }
